# Project-5

./: .coverage  .env-example  .gitignore  L08-summary-Lora-AirLLM.md  LICENSE  README.md  ex05-AirLLM.pdf.md  pyproject.toml  software_submission_guidelines.md
config/: economics_config.json  experiment_config.json
docs/: PLAN.md  PRD.md  PRD_airllm.md  PRD_economics.md  PRD_ollama.md  PROMPT_LOG.md  TODO.md
experiments/: generate_break_even_cumulative.py  generate_graphs.py  generate_ollama_graphs.py  generate_roofline.py  run_airllm.py  run_baseline.py  run_economics.py  run_ollama.py
notebooks/: results_analysis.ipynb
results/: airllm_2bit_20260624_193846.json  airllm_4bit_20260624_175218.json  airllm_8bit_20260624_175218.json  airllm_fp16_20260624_175218.json  baseline_20260624_174423.json  economics_20260623_210522.json  ollama_fp16_20260624_202504.json  ollama_q2_20260624_202626.json  ollama_q4_20260624_202609.json  ollama_q8_20260624_202548.json
src/ex05/: __init__.py  airllm_runner.py  baseline.py  config.py  economics.py  metrics.py  ollama_runner.py
tests/: conftest.py  test_airllm_runner.py  test_baseline.py  test_config.py  test_economics.py  test_metrics.py  test_ollama_runner.py
