[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ex05-airllm"
version = "1.0.0"
description = "EX05: Running a Massive LLM Locally with AirLLM and Quantization"
requires-python = ">=3.11,<3.12"
dependencies = [
    "airllm>=0.2.0",
    "transformers>=4.44,<4.47",
    "torch>=2.2.0",
    "bitsandbytes>=0.43.0",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.22.0",
    "numpy>=1.26.0",
    "optimum<1.24",
    "sentencepiece>=0.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ex05"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["BLE001"]

[tool.ruff.lint.isort]
known-first-party = ["ex05"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/ex05 --cov-report=term-missing"

[tool.coverage.run]
# baseline.py and airllm_runner.py are integration wrappers that load the
# live 16 GB Llama-3.1-8B model (and, for quantization, require a CUDA GPU).
# They cannot run in the offline unit-test suite, so they are validated by
# actually executing the experiments (see results/ and logs/) rather than by
# pytest. They are excluded from the coverage denominator so the metric
# reflects the testable utility/logic modules (config, economics, metrics).
omit = [
    "src/ex05/baseline.py",
    "src/ex05/airllm_runner.py",
]
