[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ex05-airllm"
version = "1.0.0"
description = "EX05: Running a Massive LLM Locally with AirLLM and Quantization"
requires-python = ">=3.11,<3.12"
dependencies = [
    "airllm>=0.2.0",
    "transformers>=4.44,<4.47",
    "torch>=2.2.0",
    "bitsandbytes>=0.43.0",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.22.0",
    "numpy>=1.26.0",
    "optimum<1.24",
    "sentencepiece>=0.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ex05"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["BLE001"]

[tool.ruff.lint.isort]
known-first-party = ["ex05"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# --cov-fail-under enforces the guidelines' 85% floor automatically: the suite
# fails if coverage regresses below threshold. Every src/ex05 module — including
# the baseline and AirLLM runners (HF/AirLLM mocked) — is in the denominator.
addopts = "--cov=src/ex05 --cov-report=term-missing --cov-fail-under=85"
